--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "coffeeify": "~0.6.0",
-    "browserify": "~3.24.11"
+    "browserify": "~3.24.11",
+    "beefy": "~1.0.0"
   }
 }
