--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "coffeeify": "~0.6.0",
     "browserify": "~3.24.11",
-    "beefy": "~1.0.0"
+    "beefy": "~1.0.0",
+    "tween": "~0.8.0",
+    "boids": "~1.0.0"
   }
 }
